Added the ability to build and run a fat jar using command line, Maven, and Gradle.